[package]
name = "emacs-nucleo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bumpalo = { version = "3.19.0", features = ["allocator-api2", "std"] }
emacs = "0.19.0"
nucleo = "0.5.0"

[profile.release]
codegen-units = 1
debug = 0
strip = true
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3           # <-
overflow-checks = false  # <-
panic = 'abort'
